--- a/Lab2/ID3Clf.ipynb
+++ b/Lab2/ID3Clf.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,16 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ID3DecisionTreeClassifier :\n",
-    "    def __init__(self, minSamplesLeaf = 1, minSamplesSplit = 2) :\n",
+    "    def __init__(self, minSamplesLeaf = 1, minSamplesSplit = 2, inequality = False) :\n",
     "        \n",
     "        self.attr_index = {}\n",
     "        self.__nodeCounter = 0\n",
-    "\n",
+    "        self.inequality = inequality\n",
     "        # the graph to visualise the tree\n",
     "        self.__dot = Digraph(comment='The Decision Tree')\n",
     "\n",
@@ -135,8 +135,12 @@
     "        cnt = Counter()\n",
     "        \n",
     "        for i in range(len(data)):\n",
-    "            if data[i][col] == val:\n",
-    "                cnt[target[i]] += 1\n",
+    "            if self.inequality:\n",
+    "                if data[i][col] in val:\n",
+    "                    cnt[target[i]] += 1\n",
+    "            else:\n",
+    "                if data[i][col] == val:\n",
+    "                    cnt[target[i]] += 1\n",
     "            \n",
     "        n_v = len(list(cnt.elements()))\n",
     "        ent_v = 0\n",
@@ -155,7 +159,8 @@
     "        \n",
     "        for cl in classes:\n",
     "            p_x = cnt[cl]/n\n",
-    "            entropy += - p_x * math.log(p_x,2)\n",
+    "            if p_x != 0:\n",
+    "                entropy += - p_x * math.log(p_x,2)\n",
     "        \n",
     "        col = self.attr_index[split]\n",
     "        info_gain = entropy\n",
@@ -176,9 +181,14 @@
     "            data_split[vals] = []\n",
     "            target_split[vals] = []\n",
     "            for i in range(len(target)):\n",
-    "                if data[i][col] == vals:\n",
-    "                    data_split[vals].append(data[i])\n",
-    "                    target_split[vals].append(target[i])\n",
+    "                if self.inequality:\n",
+    "                    if data[i][col] in vals:\n",
+    "                        data_split[vals].append(data[i])\n",
+    "                        target_split[vals].append(target[i])\n",
+    "                else:\n",
+    "                    if data[i][col] == vals:\n",
+    "                        data_split[vals].append(data[i])\n",
+    "                        target_split[vals].append(target[i])\n",
     "                   \n",
     "        return data_split, target_split\n",
     "        \n",
@@ -218,10 +228,6 @@
     "                    node['nodes'][vals] = leaf_node\n",
     "                else:\n",
     "                    remaining_attr = self.removekey(attributes, split)\n",
-    "                    print(attributes)\n",
-    "                    print(split)\n",
-    "                    print(ent)\n",
-    "                    print(remaining_attr)\n",
     "                    node['nodes'][vals] = self.fit(fit_data[vals],fit_target[vals],remaining_attr,classes, int(node['id']))\n",
     "\n",
     "        # fill in something more sensible here..  root should become the output of the recursive tree creation\n",
@@ -260,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,9 +280,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': 0, 'label': None, 'attribute': 'size', 'entropy': 0.9886994082884974, 'samples': 16, 'classCounts': Counter({'+': 9, '-': 7}), 'nodes': {'s': {'id': 1, 'label': None, 'attribute': 'shape', 'entropy': 0.8112781244591328, 'samples': 8, 'classCounts': Counter({'+': 6, '-': 2}), 'nodes': {'r': {'id': 2, 'label': None, 'attribute': 'color', 'entropy': 0.9182958340544896, 'samples': 6, 'classCounts': Counter({'+': 4, '-': 2}), 'nodes': {'y': {'id': 3, 'label': '+', 'attribute': None, 'entropy': None, 'samples': 5, 'classCounts': Counter({'+': 4, '-': 1}), 'nodes': None}, 'g': {'id': 4, 'label': '-', 'attribute': None, 'entropy': None, 'samples': 1, 'classCounts': Counter({'-': 1}), 'nodes': None}, 'b': {'id': 5, 'label': '+', 'attribute': None, 'entropy': None, 'samples': 0, 'classCounts': None, 'nodes': None}}}, 'i': {'id': 6, 'label': '+', 'attribute': None, 'entropy': None, 'samples': 2, 'classCounts': Counter({'+': 2}), 'nodes': None}}}, 'l': {'id': 7, 'label': None, 'attribute': 'color', 'entropy': 0.9544340029249649, 'samples': 8, 'classCounts': Counter({'-': 5, '+': 3}), 'nodes': {'y': {'id': 8, 'label': None, 'attribute': 'shape', 'entropy': 0.9852281360342516, 'samples': 7, 'classCounts': Counter({'-': 4, '+': 3}), 'nodes': {'r': {'id': 9, 'label': '-', 'attribute': None, 'entropy': None, 'samples': 6, 'classCounts': Counter({'-': 4, '+': 2}), 'nodes': None}, 'i': {'id': 10, 'label': '+', 'attribute': None, 'entropy': None, 'samples': 1, 'classCounts': Counter({'+': 1}), 'nodes': None}}}, 'g': {'id': 11, 'label': '-', 'attribute': None, 'entropy': None, 'samples': 1, 'classCounts': Counter({'-': 1}), 'nodes': None}, 'b': {'id': 12, 'label': '-', 'attribute': None, 'entropy': None, 'samples': 0, 'classCounts': None, 'nodes': None}}}}}\n",
+      "['+', '+', '+', '-', '-']\n"
+     ]
+    }
+   ],
    "source": [
     "attributes, classes, data, target, data2, target2 = ToyData().get_data()\n",
     "\n",
@@ -292,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,17 +344,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
     "digits = datasets.load_digits()\n",
-    "# digit.data"
+    "# digits.data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -391,23 +406,38 @@
       "Number of test examples:  540\n",
       "Number of total examples: 1797\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 1, 2, ..., 4, 3, 1])"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "print(\"Number of training examples: \",len(train_features))\n",
     "print(\"Number of test examples: \",len(test_features))\n",
-    "print(\"Number of total examples:\", len(train_features)+len(test_features))\n",
-    "train_labels"
+    "print(\"Number of total examples:\", len(train_features)+len(test_features))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=None,\n",
+       "                       max_features=None, max_leaf_nodes=None,\n",
+       "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "                       min_samples_leaf=1, min_samples_split=2,\n",
+       "                       min_weight_fraction_leaf=0.0, presort=False,\n",
+       "                       random_state=None, splitter='best')"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier = DecisionTreeClassifier(min_samples_leaf = 1)\n",
+    "classifier.fit(train_features, train_labels)"
    ]
   },
   {
@@ -419,8 +449,63 @@
     "id3_2 = ID3DecisionTreeClassifier()\n",
     "\n",
     "classes = [i for i in range(10)]\n",
-    "\n",
-    "my2Tree = id3_2.fit(train_features, train_labels, ,classes)"
+    "attributes = {}\n",
+    "for i in range(64):\n",
+    "    attributes[i] = [j for j in range(17)]\n",
+    "my2Tree = id3_2.fit(train_features, train_labels,attributes,classes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "plot = id3_2.make_dot_data()\n",
+    "plot.render(\"digitsTree\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-164-ca0fde8d3256>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mattributes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m6\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mattributes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m10\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mmy3Tree\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mid3_3\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_features\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_labels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mattributes\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclasses\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-154-c5f531f788ac>\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, data, target, attributes, classes, parent_id)\u001b[0m\n\u001b[0;32m    143\u001b[0m             \u001b[0mnode\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'entropy'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ment\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    144\u001b[0m             \u001b[0mnode\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'attribute'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msplit\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 145\u001b[1;33m             \u001b[0mfit_data\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfit_target\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_data_split\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtarget\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mattributes\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mclasses\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    146\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mvals\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mattributes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    147\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfit_target\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mvals\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-154-c5f531f788ac>\u001b[0m in \u001b[0;36mfind_data_split\u001b[1;34m(self, data, target, attributes, classes, split)\u001b[0m\n\u001b[0;32m    103\u001b[0m         \u001b[0mcol\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mattr_index\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    104\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mvals\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mattributes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 105\u001b[1;33m             \u001b[0mdata_split\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mvals\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    106\u001b[0m             \u001b[0mtarget_split\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mvals\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    107\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "inequality = True\n",
+    "id3_3 = ID3DecisionTreeClassifier(inequality = True)\n",
+    "attributes = {}\n",
+    "for i in range(64):\n",
+    "    attributes[i] = list()\n",
+    "    attributes[i].append([j for j in range(6)])\n",
+    "    attributes[i].append([j+6 for j in range(5)])\n",
+    "    attributes[i].append([j+10 for j in range(6)])\n",
+    "my3Tree = id3_3.fit(train_features, train_labels, attributes, classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot = id3_3.make_dot_data()\n",
+    "plot.render(\"digitsTree_DGL\")"
    ]
   },
   {
@@ -472,10 +557,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[1, 2, 3, 4]"
+   ]
   }
  ],
  "metadata": {
