Solved the inequality part with some small ugly stuff, now metrics needs to be checked

--- a/Lab2/ID3Clf.ipynb
+++ b/Lab2/ID3Clf.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,17 +178,17 @@
     "        target_split = {}\n",
     "        col = self.attr_index[split]\n",
     "        for vals in attributes[split]:\n",
-    "            data_split[vals] = []\n",
-    "            target_split[vals] = []\n",
+    "            data_split[str(vals)] = []\n",
+    "            target_split[str(vals)] = []\n",
     "            for i in range(len(target)):\n",
     "                if self.inequality:\n",
     "                    if data[i][col] in vals:\n",
-    "                        data_split[vals].append(data[i])\n",
-    "                        target_split[vals].append(target[i])\n",
+    "                        data_split[str(vals)].append(data[i])\n",
+    "                        target_split[str(vals)].append(target[i])\n",
     "                else:\n",
     "                    if data[i][col] == vals:\n",
-    "                        data_split[vals].append(data[i])\n",
-    "                        target_split[vals].append(target[i])\n",
+    "                        data_split[str(vals)].append(data[i])\n",
+    "                        target_split[str(vals)].append(target[i])\n",
     "                   \n",
     "        return data_split, target_split\n",
     "        \n",
@@ -220,15 +220,15 @@
     "            node['attribute'] = split\n",
     "            fit_data, fit_target = self.find_data_split(data,target,attributes,classes,split)    \n",
     "            for vals in attributes[split]:\n",
-    "                if len(fit_target[vals]) == 0:\n",
+    "                if len(fit_target[str(vals)]) == 0:\n",
     "                    leaf_node = self.new_ID3_node()\n",
     "                    leaf_node['label'] = cnt.most_common(1)[0][0]\n",
     "                    leaf_node['samples'] = 0\n",
     "                    self.add_node_to_graph(leaf_node,int(node['id']))\n",
-    "                    node['nodes'][vals] = leaf_node\n",
+    "                    node['nodes'][str(vals)] = leaf_node\n",
     "                else:\n",
     "                    remaining_attr = self.removekey(attributes, split)\n",
-    "                    node['nodes'][vals] = self.fit(fit_data[vals],fit_target[vals],remaining_attr,classes, int(node['id']))\n",
+    "                    node['nodes'][str(vals)] = self.fit(fit_data[str(vals)],fit_target[str(vals)],remaining_attr,classes, int(node['id']))\n",
     "\n",
     "        # fill in something more sensible here..  root should become the output of the recursive tree creation\n",
     "        # root = self.new_ID3_node()\n",
@@ -246,7 +246,13 @@
     "            elif node['nodes'] is not None:\n",
     "                attr = node['attribute']\n",
     "                val = one_data[self.attr_index[attr]]  \n",
-    "                return traverse(one_data,node['nodes'][val])\n",
+    "                if self.inequality:\n",
+    "                    for vals in node['nodes']:\n",
+    "                        if val in eval(vals):\n",
+    "                            return traverse(one_data, node['nodes'][vals])\n",
+    "                        \n",
+    "                else:\n",
+    "                    return traverse(one_data,node['nodes'][val])\n",
     "                \n",
     "            \n",
     "        for i in range(len(data)):\n",
@@ -266,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +436,7 @@
        "                       random_state=None, splitter='best')"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,11 +463,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'digitsTree.pdf'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "plot = id3_2.make_dot_data()\n",
     "plot.render(\"digitsTree\")"
@@ -469,23 +486,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-164-ca0fde8d3256>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mattributes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m6\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mattributes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m10\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mmy3Tree\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mid3_3\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_features\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_labels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mattributes\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclasses\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-154-c5f531f788ac>\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, data, target, attributes, classes, parent_id)\u001b[0m\n\u001b[0;32m    143\u001b[0m             \u001b[0mnode\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'entropy'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ment\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    144\u001b[0m             \u001b[0mnode\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'attribute'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msplit\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 145\u001b[1;33m             \u001b[0mfit_data\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfit_target\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_data_split\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtarget\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mattributes\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mclasses\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    146\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mvals\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mattributes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    147\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfit_target\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mvals\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-154-c5f531f788ac>\u001b[0m in \u001b[0;36mfind_data_split\u001b[1;34m(self, data, target, attributes, classes, split)\u001b[0m\n\u001b[0;32m    103\u001b[0m         \u001b[0mcol\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mattr_index\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    104\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mvals\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mattributes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 105\u001b[1;33m             \u001b[0mdata_split\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mvals\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    106\u001b[0m             \u001b[0mtarget_split\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mvals\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    107\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'list'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "inequality = True\n",
     "id3_3 = ID3DecisionTreeClassifier(inequality = True)\n",
@@ -500,12 +503,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'digitsTree_DGL.pdf'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "plot = id3_3.make_dot_data()\n",
     "plot.render(\"digitsTree_DGL\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted3 = id3_3.predict(test_features, my3Tree)"
    ]
   },
   {
@@ -517,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,30 +549,28 @@
     "    recall = TP/(TP+FN)\n",
     "    accuracy = (TP+TN)/(TP+TN+FP+FN)\n",
     "    f1 = 2*precision*recall/(precision+recall)\n",
-    "    return precision, recall, f1-score, support\n",
+    "    return precision, recall, accuracy, f1\n",
     "\n",
     "def metricsReport(target, predictions,classes):\n",
+    "    print(\"\\t Precision \\t\\t Recall \\t\\t accuracy \\t\\t f1-score\" )\n",
     "    for cl in classes:\n",
     "        FP = 0\n",
     "        TP = 0\n",
     "        TN = 0\n",
     "        FN = 0\n",
     "        for i in range(len(predictions)):\n",
-    "            if target[i] == val[i]:\n",
-    "                if val[i] == cl:\n",
+    "            if target[i] == predictions[i]:\n",
+    "                if predictions[i] == cl:\n",
     "                    TP += 1\n",
     "                else:\n",
     "                    FN += 1\n",
     "            else:\n",
-    "                if val[i] == cl:\n",
+    "                if predictions[i] == cl:\n",
     "                    FP += 1\n",
     "                else:\n",
     "                    TN += 1\n",
-    "        pre, re, f1, sup = getMetrics(TP,FP,TN,FN)\n",
-    "        print(cl, \"precision\",pre)\n",
-    "        print(cl, \"recall\", re)\n",
-    "        print(cl, \"f1-score\", f1)\n",
-    "        print(cl, \"support\", sup)\n",
+    "        pre, re, acc, f1 = getMetrics(TP,FP,TN,FN)\n",
+    "        print(cl,\"\\t\",pre, \"\\t\",re, \"\\t\",acc, \"\\t\",f1)\n",
     "        \n",
     "            \n",
     "                "
@@ -557,7 +578,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t Precision \t\t Recall \t\t accuracy \t\t f1-score\n",
+      "0 \t 0.8292682926829268 \t 0.44155844155844154 \t 0.9074074074074074 \t 0.576271186440678\n",
+      "1 \t 0.7142857142857143 \t 0.06493506493506493 \t 0.8629629629629629 \t 0.11904761904761903\n",
+      "2 \t 0.5454545454545454 \t 0.07792207792207792 \t 0.8592592592592593 \t 0.13636363636363635\n",
+      "3 \t 0.5 \t 0.05194805194805195 \t 0.8574074074074074 \t 0.09411764705882353\n",
+      "4 \t 0.1111111111111111 \t 0.012987012987012988 \t 0.8444444444444444 \t 0.023255813953488372\n",
+      "5 \t 0.5714285714285714 \t 0.05194805194805195 \t 0.8592592592592593 \t 0.09523809523809525\n",
+      "6 \t 0.3181818181818182 \t 0.09090909090909091 \t 0.8425925925925926 \t 0.14141414141414144\n",
+      "7 \t 0.55 \t 0.14285714285714285 \t 0.8611111111111112 \t 0.2268041237113402\n",
+      "8 \t 0.07692307692307693 \t 0.012987012987012988 \t 0.837037037037037 \t 0.022222222222222227\n",
+      "9 \t 0.36363636363636365 \t 0.05194805194805195 \t 0.8518518518518519 \t 0.09090909090909091\n"
+     ]
+    }
+   ],
+   "source": [
+    "metricsReport(test_labels, predicted3, classes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -566,13 +614,13 @@
        "[1, 2, 3, 4]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[1, 2, 3, 4]"
+    "eval(str([1,2,3,4]))"
    ]
   }
  ],
