add final fixes

--- a/Lab2/ID3Clf.ipynb
+++ b/Lab2/ID3Clf.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,10 +249,10 @@
     "                if self.inequality:\n",
     "                    for vals in node['nodes']:\n",
     "                        if val in eval(vals):\n",
-    "                            return traverse(one_data, node['nodes'][vals])\n",
+    "                            return traverse(one_data, node['nodes'][str(vals)])\n",
     "                        \n",
     "                else:\n",
-    "                    return traverse(one_data,node['nodes'][val])\n",
+    "                    return traverse(one_data,node['nodes'][str(val)])\n",
     "                \n",
     "            \n",
     "        for i in range(len(data)):\n",
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -331,6 +331,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification report for classifier : \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           +       0.67      0.67      0.67         3\n",
+      "           -       0.50      0.50      0.50         2\n",
+      "\n",
+      "    accuracy                           0.60         5\n",
+      "   macro avg       0.58      0.58      0.58         5\n",
+      "weighted avg       0.60      0.60      0.60         5\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Classification report for classifier : \\n\", metrics.classification_report(target2, predicted))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion matrix:\n",
+      "[[2 1]\n",
+      " [1 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Confusion matrix:\\n%s\" % metrics.confusion_matrix(target2, predicted))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -339,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +481,7 @@
        "                       random_state=None, splitter='best')"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +502,7 @@
     "classes = [i for i in range(10)]\n",
     "attributes = {}\n",
     "for i in range(64):\n",
-    "    attributes[i] = [j for j in range(17)]\n",
+    "    attributes[i] = [float(j) for j in range(17)]\n",
     "my2Tree = id3_2.fit(train_features, train_labels,attributes,classes)\n"
    ]
   },
@@ -486,7 +531,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted2 = id3_2.predict(test_features, my2Tree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification report for classifier : \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.48      0.57      0.52        53\n",
+      "           1       0.14      0.11      0.12        53\n",
+      "           2       0.50      0.64      0.56        53\n",
+      "           3       0.54      0.68      0.60        53\n",
+      "           4       0.47      0.44      0.45        57\n",
+      "           5       0.21      0.18      0.19        56\n",
+      "           6       0.45      0.46      0.46        54\n",
+      "           7       0.24      0.19      0.21        54\n",
+      "           8       0.25      0.25      0.25        52\n",
+      "           9       0.56      0.51      0.53        55\n",
+      "\n",
+      "    accuracy                           0.40       540\n",
+      "   macro avg       0.38      0.40      0.39       540\n",
+      "weighted avg       0.38      0.40      0.39       540\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Classification report for classifier : \\n\", metrics.classification_report(test_labels, predicted2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion matrix:\n",
+      "[[30  4  0  0  4  3  8  2  1  1]\n",
+      " [ 1  6  9  4  3  6  5  3  9  7]\n",
+      " [ 1  4 34  5  0  2  0  2  3  2]\n",
+      " [ 1  2  3 36  1  2  0  3  5  0]\n",
+      " [ 6  3  1  0 25  6  9  2  1  4]\n",
+      " [10  3  2  6  7 10  3  6  7  2]\n",
+      " [ 5  7  0  1  5  1 25  5  4  1]\n",
+      " [ 3  6  8  0  7  8  1 10  6  5]\n",
+      " [ 4  7  9  2  1  6  4  6 13  0]\n",
+      " [ 1  1  2 13  0  4  0  3  3 28]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Confusion matrix:\\n%s\" % metrics.confusion_matrix(test_labels, predicted2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,15 +610,15 @@
     "attributes = {}\n",
     "for i in range(64):\n",
     "    attributes[i] = list()\n",
-    "    attributes[i].append([j for j in range(6)])\n",
-    "    attributes[i].append([j+6 for j in range(5)])\n",
-    "    attributes[i].append([j+10 for j in range(6)])\n",
+    "    attributes[i].append([float(j) for j in range(5)])\n",
+    "    attributes[i].append([float(j+5) for j in range(7)])\n",
+    "    attributes[i].append([float(j+12) for j in range(5)])\n",
     "my3Tree = id3_3.fit(train_features, train_labels, attributes, classes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +627,7 @@
        "'digitsTree_DGL.pdf'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,10 +647,71 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification report for classifier : \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.93      0.94      0.93        53\n",
+      "           1       0.66      0.77      0.71        53\n",
+      "           2       0.83      0.64      0.72        53\n",
+      "           3       0.85      0.75      0.80        53\n",
+      "           4       0.77      0.82      0.80        57\n",
+      "           5       0.76      0.79      0.77        56\n",
+      "           6       0.80      0.87      0.83        54\n",
+      "           7       0.72      0.80      0.75        54\n",
+      "           8       0.65      0.62      0.63        52\n",
+      "           9       0.88      0.78      0.83        55\n",
+      "\n",
+      "    accuracy                           0.78       540\n",
+      "   macro avg       0.78      0.78      0.78       540\n",
+      "weighted avg       0.78      0.78      0.78       540\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Classification report for classifier : \\n\", metrics.classification_report(test_labels, predicted3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion matrix:\n",
+      "[[50  1  0  0  0  1  1  0  0  0]\n",
+      " [ 0 41  0  1  3  1  2  1  3  1]\n",
+      " [ 1  1 34  3  0  1  3  1  6  3]\n",
+      " [ 0  2  1 40  1  4  0  3  1  1]\n",
+      " [ 2  1  0  0 47  0  4  3  0  0]\n",
+      " [ 0  3  1  0  3 44  0  4  1  0]\n",
+      " [ 0  6  0  0  0  0 47  0  1  0]\n",
+      " [ 0  1  0  1  1  4  0 43  3  1]\n",
+      " [ 0  4  5  0  4  3  2  2 32  0]\n",
+      " [ 1  2  0  2  2  0  0  3  2 43]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Confusion matrix:\\n%s\" % metrics.confusion_matrix(test_labels, predicted3))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Accuracy metrics"
+    "# Accuracy metrics (ska detta ens göras?)"
    ]
   },
   {
@@ -605,22 +781,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3, 4]"
+       "1.0"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eval(str([1,2,3,4]))"
+    "float(1)"
    ]
   }
  ],
