add lab3 simple CNN

--- a/Lab3/SimpleCNN.ipynb
+++ b/Lab3/SimpleCNN.ipynb
@@ -27,7 +27,6 @@
     "import shutil\n",
     "\n",
     "\n",
-    "\n",
     "# To create the same dataset\n",
     "random.seed(0)\n",
     "\n",
@@ -91,9 +90,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "from keras import layers\n",
@@ -108,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,22 +141,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 2625 images belonging to 5 classes.\n",
+      "Found 865 images belonging to 5 classes.\n",
+      "Found 865 images belonging to 5 classes.\n"
+     ]
+    }
+   ],
    "source": [
     "train_generator = train_datagen.flow_from_directory(\n",
     "    train_dir, target_size=(150, 150),\n",
     "    batch_size=25, class_mode= 'categorical')\n",
     "\n",
-    "validation_generator = test_datagen.flow_from_directory(\n",
+    "validation_generator = val_datagen.flow_from_directory(\n",
     "    validation_dir, target_size=(150, 150),\n",
-    "    batch_size=5, class_mode= 'categorical')"
+    "    batch_size=25, class_mode= 'categorical')\n",
+    "\n",
+    "test_generator = test_datagen.flow_from_directory(\n",
+    "    test_dir, target_size=(150, 150), \n",
+    "    batch_size=20, class_mode='categorical')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,19 +218,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "105/105 [==============================] - 227s 2s/step - loss: 1.4559 - accuracy: 0.3562 - val_loss: 1.3244 - val_accuracy: 0.4640\n",
+      "Epoch 2/10\n",
+      "105/105 [==============================] - 160s 2s/step - loss: 1.1803 - accuracy: 0.5166 - val_loss: 0.9218 - val_accuracy: 0.4973\n",
+      "Epoch 3/10\n",
+      "105/105 [==============================] - 139s 1s/step - loss: 1.0151 - accuracy: 0.5855 - val_loss: 0.8404 - val_accuracy: 0.6378\n",
+      "Epoch 4/10\n",
+      "105/105 [==============================] - 257s 2s/step - loss: 0.9096 - accuracy: 0.6446 - val_loss: 0.8220 - val_accuracy: 0.6446\n",
+      "Epoch 5/10\n",
+      "105/105 [==============================] - 259s 2s/step - loss: 0.8099 - accuracy: 0.6808 - val_loss: 1.3600 - val_accuracy: 0.6419\n",
+      "Epoch 6/10\n",
+      "105/105 [==============================] - 265s 3s/step - loss: 0.7306 - accuracy: 0.7116 - val_loss: 0.9905 - val_accuracy: 0.6581\n",
+      "Epoch 7/10\n",
+      "105/105 [==============================] - 225s 2s/step - loss: 0.6262 - accuracy: 0.7562 - val_loss: 0.6614 - val_accuracy: 0.6662\n",
+      "Epoch 8/10\n",
+      "105/105 [==============================] - 282s 3s/step - loss: 0.5496 - accuracy: 0.7821 - val_loss: 1.3588 - val_accuracy: 0.6747\n",
+      "Epoch 9/10\n",
+      "105/105 [==============================] - 267s 3s/step - loss: 0.4636 - accuracy: 0.8255 - val_loss: 0.6283 - val_accuracy: 0.6703\n",
+      "Epoch 10/10\n",
+      "105/105 [==============================] - 276s 3s/step - loss: 0.3731 - accuracy: 0.8640 - val_loss: 1.4857 - val_accuracy: 0.6851\n"
+     ]
+    }
+   ],
    "source": [
     "history = model.fit_generator(train_generator, steps_per_epoch=105, epochs=10,\n",
-    "                            validation_data=validation_generator, validation_steps=173)"
+    "                            validation_data=validation_generator, validation_steps=30)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 865 images belonging to 5 classes.\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'DirectoryIterator' object has no attribute 'features'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-27-057c274762ed>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m     batch_size=20, class_mode='categorical')\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mpred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest_generator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DirectoryIterator' object has no attribute 'features'"
+     ]
+    }
+   ],
+   "source": [
+    "test_datagen = ImageDataGenerator(rescale=1. / 255)\n",
+    "test_generator = test_datagen.flow_from_directory(\n",
+    "    test_dir, target_size=(150, 150), \n",
+    "    batch_size=20, class_mode='categorical')\n",
+    "\n",
+    "pred = model.predict_generator(test_generator, steps=30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "600\n",
+      "Classification Report: \n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.33      0.19      0.25       175\n",
+      "           1       0.34      0.27      0.30       215\n",
+      "           2       0.29      0.26      0.27       148\n",
+      "           3       0.09      0.11      0.10        62\n",
+      "           4       0.00      0.00      0.00         0\n",
+      "\n",
+      "    accuracy                           0.23       600\n",
+      "   macro avg       0.21      0.17      0.18       600\n",
+      "weighted avg       0.30      0.23      0.26       600\n",
+      "\n",
+      "Confusion Matrix: \n",
+      "[[34 43 35 23 40]\n",
+      " [35 58 50 31 41]\n",
+      " [16 50 38 15 29]\n",
+      " [17 22  6  7 10]\n",
+      " [ 0  0  0  0  0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_labels = test_generator.classes\n",
+    "predictions = np.array([np.argmax(x) for x in pred])\n",
+    "test_labels = test_labels[:len(predictions)]\n",
+    "print(len(predictions))\n",
+    "\n",
+    "print(\"Classification Report: \")\n",
+    "print(metrics.classification_report(test_labels, predictions))\n",
+    "print(\"Confusion Matrix: \")\n",
+    "print(metrics.confusion_matrix(test_labels, predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +467,9 @@
    "source": [
     "train_datagen = ImageDataGenerator(rotation_range=40, width_shift_range=0.2, height_shift_range=0.2, \n",
     "                             shear_range=0.2, zoom_range=0.2, horizontal_flip=True, fill_mode='nearest')\n",
-    "test_datagen = ImageDataGenerator(rescale = 1./255)"
+    "\n",
+    "val_datagen = ImageDataGenerator(rescale=1. / 255)\n",
+    "test_datagen = ImageDataGenerator(rescale=1. / 255)"
    ]
   },
   {
@@ -377,8 +513,13 @@
     "                                                    batch_size=25, class_mode='categorical')\n",
     "\n",
     "\n",
-    "validation_generator = test_datagen.flow_from_directory(validation_dir,target_size=(150, 150),\n",
-    "                                                        batch_size=20,class_mode='categorical')"
+    "validation_generator = val_datagen.flow_from_directory(\n",
+    "    validation_dir,target_size=(150, 150), \n",
+    "    batch_size=20,class_mode='categorical')\n",
+    "\n",
+    "test_generator = test_datagen.flow_from_directory(\n",
+    "    test_dir, target_size=(150, 150), \n",
+    "    batch_size=20, class_mode='categorical')"
    ]
   },
   {
@@ -478,9 +619,13 @@
     "    train_dir, target_size=(150, 150),\n",
     "    batch_size=25, class_mode= 'categorical')\n",
     "\n",
-    "validation_generator = test_datagen.flow_from_directory(\n",
+    "validation_generator = val_datagen.flow_from_directory(\n",
     "    validation_dir, target_size=(150, 150),\n",
-    "    batch_size=20, class_mode= 'categorical')"
+    "    batch_size=20, class_mode= 'categorical')\n",
+    "\n",
+    "test_generator = test_datagen.flow_from_directory(\n",
+    "    test_dir, target_size=(150, 150), \n",
+    "    batch_size=20, class_mode='categorical')"
    ]
   },
   {
@@ -528,14 +673,19 @@
    "source": [
     "train_datagen_aug = ImageDataGenerator(rotation_range=40, width_shift_range=0.2, height_shift_range=0.2, \n",
     "                             shear_range=0.2, zoom_range=0.2, horizontal_flip=True, fill_mode='nearest')\n",
-    "test_datagen = ImageDataGenerator(rescale = 1./255)\n",
+    "val_datagen = ImageDataGenerator(rescale = 1./255)\n",
+    "test_datagen = ImageDataGenerator(rescale=1. / 255)\n",
     "\n",
     "train_generator = train_datagen_aug.flow_from_directory(train_dir, target_size=(150, 150), \n",
     "                                                    batch_size=25, class_mode='categorical')\n",
     "\n",
     "\n",
-    "validation_generator = test_datagen.flow_from_directory(validation_dir,target_size=(150, 150),\n",
-    "                                                        batch_size=20,class_mode='categorical')"
+    "validation_generator = val_datagen.flow_from_directory(validation_dir,target_size=(150, 150),\n",
+    "                                                        batch_size=20,class_mode='categorical')\n",
+    "\n",
+    "test_generator = test_datagen.flow_from_directory(\n",
+    "    test_dir, target_size=(150, 150), \n",
+    "    batch_size=20, class_mode='categorical')"
    ]
   },
   {
