--- a/Lab5/lab5_1.ipynb
+++ b/Lab5/lab5_1.ipynb
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,9 +1135,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification report own GNB:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.48      0.91      0.63       164\n",
+      "           1       0.29      0.98      0.44       152\n",
+      "           2       0.45      0.03      0.06       155\n",
+      "           3       0.75      0.18      0.28       154\n",
+      "           4       0.75      0.04      0.08       143\n",
+      "           5       1.00      0.01      0.01       141\n",
+      "           6       0.64      0.76      0.70       143\n",
+      "           7       0.84      0.43      0.57       158\n",
+      "           8       0.35      0.27      0.30       132\n",
+      "           9       0.44      0.74      0.55       158\n",
+      "\n",
+      "    accuracy                           0.44      1500\n",
+      "   macro avg       0.60      0.43      0.36      1500\n",
+      "weighted avg       0.60      0.44      0.37      1500\n",
+      "\n",
+      "\n",
+      "Confusion matrix own GNB:\n",
+      "[[149   5   2   1   1   0   1   0   4   1]\n",
+      " [  0 149   1   0   0   0   0   1   1   0]\n",
+      " [ 34  49   5   6   0   0  42   2  10   7]\n",
+      " [ 45  59   1  27   0   0   1   5   7   9]\n",
+      " [ 18  55   2   0   6   0   8   4   8  42]\n",
+      " [ 41  50   0   0   0   1   3   0  34  12]\n",
+      " [  4  30   0   0   0   0 109   0   0   0]\n",
+      " [  1  27   0   2   0   0   1  68   0  59]\n",
+      " [ 12  61   0   0   0   0   4   0  35  20]\n",
+      " [  4  35   0   0   1   0   0   1   0 117]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Classification report own GNB:\\n%s\\n\"\n",
     "  % (metrics.classification_report(y_test_l, y_pred_l)))\n",
